--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="logo">
             <table>
               <tr>
-                <th><object type="image/svg+xml" data="minecraft-8.svg" width="76" height="74"></object></th>
+                <th><object type="image/svg+xml" data="img/minecraft-8.svg" width="76" height="74"></object></th>
                 <th><p class="logo-txt">Minecraft</p></th>
               </tr>
             </table>
@@ -25,7 +25,7 @@
           <table>
             <tr>
               <th><p>about us</p></th>
-              <th><object type="image/svg+xml" data="com.svg" width="96" height="42"></object></th>
+              <th><object type="image/svg+xml" data="img/com.svg" width="96" height="42"></object></th>
             </tr>
           </table>
             </div>
@@ -35,7 +35,7 @@
           <table>
             <tr>
               <th><p>other websites</p></th>
-              <th><object type="image/svg+xml" data="com.svg" width="96" height="42"></object></th>
+              <th><object type="image/svg+xml" data="img/com.svg" width="96" height="42"></object></th>
             </tr>
           </table>
         </div>
@@ -45,7 +45,7 @@
           <table>
             <tr>
               <th><p>support</p></th>
-              <th><object type="image/svg+xml" data="com.svg" width="96" height="42"></object></th>
+              <th><object type="image/svg+xml" data="img/com.svg" width="96" height="42"></object></th>
             </tr>
           </table>
         </div>
@@ -55,7 +55,7 @@
           <table>
             <tr>
               <th><p>servers</p></th>
-              <th><object type="image/svg+xml" data="com.svg" width="96" height="42"></object></th>
+              <th><object type="image/svg+xml" data="img/com.svg" width="96" height="42"></object></th>
             </tr>
           </table>
         </div></th>
