--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Mincraft</title>
   </head>
-  <body style="background-color: gray;">
+  <body style="background-color: rgb(57, 57, 57);">
 
     <header>
       <div class="header">
@@ -21,41 +21,41 @@
         </div>
             </th>
             <th>
-        <div class="about"> 
+        <div class="about m"> 
           <table>
             <tr>
               <th><p>about us</p></th>
-              <th><object type="image/svg+xml" data="img/com.svg" width="96" height="42"></object></th>
+              <th><object type="image/svg+xml" data="img/com.svg" width="46" height="42"></object></th>
             </tr>
           </table>
             </div>
           </th>
           <th>
-        <div class="others">
+        <div class="others m">
           <table>
             <tr>
               <th><p>other websites</p></th>
-              <th><object type="image/svg+xml" data="img/com.svg" width="96" height="42"></object></th>
+              <th><object type="image/svg+xml" data="img/com.svg" width="46" height="42"></object></th>
             </tr>
           </table>
         </div>
       </th>
       <th>
-        <div class="supp">
+        <div class="supp m">
           <table>
             <tr>
               <th><p>support</p></th>
-              <th><object type="image/svg+xml" data="img/com.svg" width="96" height="42"></object></th>
+              <th><object type="image/svg+xml" data="img/com.svg" width="46" height="42"></object></th>
             </tr>
           </table>
         </div>
       </th>
       <th>
-        <div class="server">
+        <div class="server m">
           <table>
             <tr>
               <th><p>servers</p></th>
-              <th><object type="image/svg+xml" data="img/com.svg" width="96" height="42"></object></th>
+              <th><object type="image/svg+xml" data="img/com.svg" width="46" height="42"></object></th>
             </tr>
           </table>
         </div></th>
@@ -63,6 +63,36 @@
       </table>
       </div>
     </header>
+    <hr class="line">
+
+    <div class="frame1">
+      <table>
+        <tr>
+          <th><div class="text-field">
+            <h1>The best open world game on Earth!</h1>
+            <p>Minecraft is an indie sandbox computer game created by
+              Swedish programmer Markus Persson and published by his studio Mojang.</p>
+          </div></th>
+          <th><div>
+            <img src="img/images123.jpg" alt="" class="img-field">
+          </div></th>
+        </tr>
+      </table>
+    </div>
+    <div class="frame1">
+      <table>
+        <tr>
+          <th><div class="text-field">
+            <h1>Many intresting servers!             </h1>
+            <p>You will never be bored in Minecraft as there are many cool servers where you can play together</p>
+          </div></th>
+          <th><div>
+            <img src="img/images123.jpg" alt="" class="img-field">
+          </div></th>
+        </tr>
+      </table>
+
+    </div>
 
   </body>
 </html>
