--- a/dont_main.html
+++ b/dont_main.html
@@ -30,7 +30,7 @@
         <div class="about m"> 
           <table>
             <tr>
-              <th><p>about us</p></th>
+              <th><p style="font-family: Itim;">about us</p></th>
               <th><object type="image/svg+xml" data="img/com.svg" width="46" height="42"></object></th>
             </tr>
           </table>
@@ -40,7 +40,7 @@
         <div class="others m">
           <table>
             <tr>
-              <th><p>other websites</p></th>
+              <th><p style="font-family: Itim;">other websites</p></th>
               <th><object type="image/svg+xml" data="img/com.svg" width="46" height="42"></object></th>
             </tr>
           </table>
@@ -50,7 +50,7 @@
         <div class="supp m">
           <table>
             <tr>
-              <th><p>support</p></th>
+              <th><p style="font-family: Itim;">support</p></th>
               <th><object type="image/svg+xml" data="img/com.svg" width="46" height="42"></object></th>
             </tr>
           </table>
@@ -60,7 +60,7 @@
         <div class="server m">
           <table>
             <tr>
-              <th><p>servers</p></th>
+              <th><p style="font-family: Itim;">servers</p></th>
               <th><object type="image/svg+xml" data="img/com.svg" width="46" height="42"></object></th>
             </tr>
           </table>
