--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <table>
             <tr>
               <th><p>about us</p></th>
-              <th><object type="image/svg+xml" data="img/com.svg" width="46" height="42"></object></th>
+              <th><img src="img/arr.png" alt="" width="20" height="20"></th>
             </tr>
           </table>
             </div>
@@ -35,7 +35,7 @@
           <table>
             <tr>
               <th><p>other websites</p></th>
-              <th><object type="image/svg+xml" data="img/com.svg" width="46" height="42"></object></th>
+              <th><img src="img/arr.png" alt="" width="20" height="20"></th>
             </tr>
           </table>
         </div>
@@ -45,7 +45,7 @@
           <table>
             <tr>
               <th><p>support</p></th>
-              <th><object type="image/svg+xml" data="img/com.svg" width="46" height="42"></object></th>
+              <th><img src="img/arr.png" alt="" width="20" height="20"></th>
             </tr>
           </table>
         </div>
@@ -55,7 +55,7 @@
           <table>
             <tr>
               <th><p>servers</p></th>
-              <th><object type="image/svg+xml" data="img/com.svg" width="46" height="42"></object></th>
+              <th><img src="img/arr.png" alt="" width="20" height="20"></th>
             </tr>
           </table>
         </div></th>
