--- a/dont_main.html
+++ b/dont_main.html
@@ -31,7 +31,7 @@
           <table>
             <tr>
               <th><p style="font-family: Itim;">about us</p></th>
-              <th><object type="image/svg+xml" data="img/com.svg" width="46" height="42"></object></th>
+              <th><img src="img/arr.png" alt="" width="20" height="20"></th>
             </tr>
           </table>
             </div>
@@ -41,7 +41,7 @@
           <table>
             <tr>
               <th><p style="font-family: Itim;">other websites</p></th>
-              <th><object type="image/svg+xml" data="img/com.svg" width="46" height="42"></object></th>
+              <th><img src="img/arr.png" alt="" width="20" height="20"></th>
             </tr>
           </table>
         </div>
@@ -51,7 +51,7 @@
           <table>
             <tr>
               <th><p style="font-family: Itim;">support</p></th>
-              <th><object type="image/svg+xml" data="img/com.svg" width="46" height="42"></object></th>
+              <th><img src="img/arr.png" alt="" width="20" height="20"></th>
             </tr>
           </table>
         </div>
@@ -61,7 +61,7 @@
           <table>
             <tr>
               <th><p style="font-family: Itim;">servers</p></th>
-              <th><object type="image/svg+xml" data="img/com.svg" width="46" height="42"></object></th>
+              <th><img src="img/arr.png" alt="" width="20" height="20"></th>
             </tr>
           </table>
         </div></th>
